[project]
name = "fugginghace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "huggingface-hub>=0.36.0",
    "joblib>=1.5.2",
    "modelscan>=0.8.7",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
]
